# termifai

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.linux  Dockerfile.windows  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: build-windows.md
scripts/: build-linux.sh  build-termifaid.sh  build-windows.sh  change-version.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/termifai-core/: Cargo.toml
src-tauri/crates/termifai-core/src/: layout.rs  lib.rs  store.rs
src-tauri/crates/termifai-core/src/model/: forwards.rs  hosts.rs  mod.rs  snippets.rs  ssh_keys.rs  sync_state.rs  tombstones.rs  vault.rs
src-tauri/crates/termifai-core/src/sync/: backend.rs  collections.rs  dropbox_backend.rs  engine.rs  gdrive_backend.rs  local_backend.rs  merge.rs  mod.rs  oauth.rs  oauth_secrets.example.rs  payload.rs
src-tauri/crates/termifaid/: Cargo.toml  build.rs  termifaid.rc
src-tauri/crates/termifaid/src/: main.rs  portal.rs
src-tauri/finder-extension/: FinderSync.swift  Info.plist  build.sh
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  dashboard.rs  global_hotkey.rs  hosts.rs  lib.rs  port_forwarding.rs  pty_manager.rs  quick_terminal.rs  sftp.rs  sftp_transfer.rs  snippet_exec.rs  snippets.rs  ssh_keys.rs  store.rs  sync.rs  sync_auto.rs  tombstones.rs  vault.rs
src-tauri/src/global_hotkey/: portal.rs
src-tauri/src/ssh/: mod.rs
src/components/app/: AppShell.tsx  SftpContextMenu.tsx  SftpEmptyContextMenu.tsx  SftpNewFolderDialog.tsx  SftpPermissionsDialog.tsx  SftpRenameDialog.tsx  VaultGate.tsx  VaultSetupDialog.tsx  VaultUnlockDialog.tsx  XTerminal.tsx  data.ts  icons.tsx  types.ts
src/components/quick-terminal/: QuickTerminalWindow.tsx
src/components/settings/: SettingsWindow.tsx
src/components/shared/: modal-primitives.tsx
src/components/ui/: scroll-area.tsx  tabs.tsx
src/features/dashboard/: DashboardView.tsx
src/features/hosts/: HostsView.tsx
src/features/port-forwarding/: PortForwardingView.tsx
src/features/sftp/: SftpView.tsx
src/features/snippets/: SnippetsView.tsx  osTargets.ts
src/features/ssh-keys/: SshKeysView.tsx
src/lib/: app-theme.ts  dashboard.ts  dashboardStore.ts  global-hotkey.ts  platform.ts  shell-quote.ts  shortcuts.ts  snippets-events.ts  sync-settings-cache.ts  terminal-appearance.ts  terminal-highlighter.ts  terminal-line-tracker.ts
src/lib/api/: global-hotkey.ts  hosts.ts  port-forwarding.ts  quick-terminal.ts  sftp.ts  snippets.ts  ssh-keys.ts  sync.ts  terminal.ts  transport.ts  vault.ts
