[package]
name = "termifai"
version = "0.1.0"
description = "A modern terminal emulator"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
time = { version = "0.3", features = ["formatting"] }
futures = "0.3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
keyring = "3"
hmac = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
# keyring v3 ships only a non-persistent mock store unless a platform backend
# is enabled; apple-native gives us the real macOS Keychain.
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[patch.crates-io]
portable-pty = { path = "../vendor/portable-pty" }
