[workspace]
members = ["crates/termifai-core", "crates/termifaid"]

[package]
name = "termifai"
version = "0.9.1"
description = "A modern terminal emulator"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
termifai-core = { path = "crates/termifai-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
oauth2 = "4"
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
auto-launch = "0.5"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
time = { version = "0.3", features = ["formatting"] }
futures = "0.3"
base64 = "0.22"
keyring = "3"
hmac = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
# keyring v3 ships only a non-persistent mock store unless a platform backend
# is enabled; apple-native gives us the real macOS Keychain.
keyring = { version = "3", features = ["apple-native"] }
# NSProcessInfo activity (App Nap exemption) during hidden --background
# startup; already in the tree as a tauri dependency, so this pins no new
# version.
objc2 = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[patch.crates-io]
portable-pty = { path = "../vendor/portable-pty" }
