[package]
name = "termifai-core"
version = "1.0.0"
description = "Platform-agnostic data models, persistence, and crypto for Termifai"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
oauth2 = "4"
